--- a/view/term.html
+++ b/view/term.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"
-    data-client-host="<%= host %>"
-    data-client-port="<%= port %>"
-    data-term-id="<%= termId %>"
->
+<html lang="en" data-client-host="<%= host %>" data-client-port="<%= port %>">
     <head>
         <meta charset="utf-8">
-        <title>term-<%= clientId %></title>
+        <title>term-<%= clientId %>-<%= termId %></title>
         <link rel="stylesheet" href="/css/term.css" />
     </head>
     <body>
