--- a/view/index.html
+++ b/view/index.html
@@ -48,9 +48,9 @@
             </tbody>
         </table>
     </section>
-    <footer>
+    <!-- <footer>
         <p class="am-padding-left">&copy; 2015 chemdemo. Licensed under MIT license.</p>
-    </footer>
+    </footer> -->
     <script src="/js/jquery.min.js"></script>
     <script src="/js/amazeui.min.js"></script>
     <script src="/js/monit.js"></script>
