change page title

--- a/view/index.html
+++ b/view/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="am-topbar admin-header">
         <div class="am-topbar-brand">
-            <strong>NFly</strong> <small>monit</small>
+            <strong>RShell Monitor</strong>
         </div>
     </header>
     <section class="container">
