rename proj name to `wts`

--- a/view/index.html
+++ b/view/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>sockets list</title>
+    <title>remote socket client list</title>
     <link rel="stylesheet" href="/css/amazeui.min.css" />
     <link rel="stylesheet" href="/css/monit.css" />
 </head>
@@ -11,7 +11,7 @@
 <body>
     <header class="am-topbar admin-header">
         <div class="am-topbar-brand">
-            <strong>RShell Monitor</strong>
+            <strong>WTS-Monitor</strong>
         </div>
     </header>
     <section class="container">
