--- a/view/index.html
+++ b/view/index.html
@@ -15,15 +15,15 @@
         </div>
     </header>
     <section class="container">
-        <table id="client-list" class="am-table am-table-bordered client-list">
+        <table id="client-list" class="am-table am-table-bordered am-table-striped am-table-hover client-list">
             <thead>
                 <tr>
-                    <th>group</th>
-                    <th>clientId</th>
-                    <th>host</th>
-                    <th>port</th>
-                    <th>status</th>
-                    <th>actions</th>
+                    <th>Group</th>
+                    <th>ClientId</th>
+                    <th>Host</th>
+                    <th>Port</th>
+                    <th>Status</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -31,9 +31,9 @@
             </tbody>
         </table>
     </section>
-    <!-- <footer>
+    <footer>
         <p class="am-padding-left">&copy; 2015 chemdemo. Licensed under MIT license.</p>
-    </footer> -->
+    </footer>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/amazeui.min.js"></script>
