change copy name

--- a/view/index.html
+++ b/view/index.html
@@ -32,7 +32,7 @@
         </table>
     </section>
     <footer>
-        <p class="am-padding-left">&copy; 2015 chemdemo. Licensed under MIT license.</p>
+        <p class="am-padding-left">&copy; 2015 dm.yang. Licensed under MIT license.</p>
     </footer>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery.min.js"></script>
