--- a/view/index.html
+++ b/view/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>remote socket client list</title>
+    <link href="/favicon.ico" type="image/x-icon" rel="icon" />
+    <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon" />
     <link rel="stylesheet" href="/css/amazeui.min.css" />
     <link rel="stylesheet" href="/css/monit.css" />
 </head>
